# secondo_anno_root

esempi_codice_lezione/lezione_2/: main.cxx  myClass.cxx  myClass.h
esempi_codice_lezione/lezione_3/: BaseClass.cxx  BaseClass.h  DerivedClass.cxx  DerivedClass.h  Person.cxx  Person.h  Student.cxx  Student.h  main.cxx  main2.cxx
esempi_codice_lezione/lezione_4/: myMacro.C  myMacroSol_V10.C  myMacroSol_V11.C  myMacroSol_V12.C  myMacroSol_V13.C  myMacroSol_V14.C  testHisto.C  testHisto.root
esempi_codice_lezione/lezione_5/: MyClass.cxx  MyClass.h  benchmark.C  efficiency.C  myClassMacro.C  myMacroSol_V15.C  proportions.C  resolution.C  testCorrelation.C  testList.C
fit_examples/due_gaussiane/: analysis.cpp  data.txt  duegaussiane.txt  prova.cpp  rumore.txt
fit_examples/esponenziale_fondo_costante/: analysis.cpp  data.txt  esponenziale-fondo.txt  rumore.txt
fit_examples/gaussiana1/: analysis.cpp  data.txt  gaussiana1.txt  ratioplot.cpp  rumore.txt
laboratori/: lab_4 - collegamento.lnk
laboratori/lab_2/: CMakeLists.txt  Particle.cpp  ParticleType.cpp  ParticleType.hpp  ParticleType_cpp.d  ParticleType_cpp_ACLiC_dict_rdict.pcm  Particle_cpp_ACLiC_dict_rdict.pcm  ResonanceType.cpp  ResonanceType.hpp  ResonanceType_cpp.d  ResonanceType_cpp_ACLiC_dict_rdict.pcm  main.cpp  main_cpp.d  main_cpp_ACLiC_dict_rdict.pcm  mySimulation.root  test2.cpp
prove/: benchmark.cpp  list.cpp  prova.cpp  singleton.cpp
root/: 1_fill_and_fit.cpp  2_list.cpp  3_proportions.cpp  4_independent_extractions.cpp  5_resolution.cpp  6_efficiency.cpp  7_benchmark.cpp
(+150 files in other folders)
